add loading indicator on save

--- a/client/src/app/modules/trips/components/trip-logger/trip-logger.component.html
+++ b/client/src/app/modules/trips/components/trip-logger/trip-logger.component.html
@@ -60,7 +60,7 @@
       <!-- Submit -->
       <div class="card-footer">
         <button (click)="navigateToTrips()" class="btn btn-default">Cancel</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button [clrLoading]="isSaving" [disabled]="isSaving" type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
   </div>
