add a workflow for password resets

--- a/client/src/app/modules/auth/components/login/login.component.html
+++ b/client/src/app/modules/auth/components/login/login.component.html
@@ -20,6 +20,7 @@
 
       <button [disabled]="form.invalid || isProcessing" type="submit" class="btn btn-primary">LOG IN</button>
       <a routerLink="/auth/register" class="signup">Sign up for a new account</a>
+      <a routerLink="/auth/forgot" class="signup">Forgot Password?</a>
     </div>
   </form>
 </div>
